see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Apr-2010 Jean-Marie Simonet
$ Refactoring ini/keys in libraries/J/Installer/pack and plugin + some
# Bug fix in login.php
$ Standardize Show, Hide, Hits
# Bug fix in feed.php (Thanks Dennis)

22-Apr-2010 Andrew Eddie
 ^ Refactoring of internal property names in the MVC classes.

21-Apr-2010 Christophe Demko
$# Changing en_GB to en-GB in sample_data.sql

21-Apr-2010 Andrew Eddie
 + Add magic __get method to JDate.

21-Apr-2010 Jean-Marie Simonet
$ Refactoring ini/keys in libraries/J/Installer/component
$ Refactoring ini/keys in libraries/J/Installer/file
$ Refactoring ini/keys in libraries/J/Installer/language
$ Refactoring ini/keys in libraries/J/Installer/library
$ Refactoring ini/keys in libraries/J/Installer/module
# Fixing logout -which also fixes mod_logged- (Thank you Dennis!)
# Fixing Toggle menu item selection in com_modules
+ Adding custom positions for modules (Thanks Dennis)


20-Apr-2010 Mark Dexter
# Fix PHP notice in mod_logged
^ Change name of component parameter from show_page_title to show_page_heading
# Fixed parameters in content views (Angie Radtke)
# Make global content parameters consistent with layouts, fix language tags
# Fix parameter merge for content single category menu items
# Fix param and language bugs in featured view
# Fix parameter priority for single article view
# Fix issue where an existing featured article could not be saved (Elin Waring)

20-Apr-2010 Andrew Eddie
 ^ Rename JModel _populateState to populateState, _getStoreId to getStoreId, _getListQuery to getListQuery.

20-Apr-2010 Christophe Demko
^+ Enhancing pluralisation of strings
